# astroshield2-frontend

./: .coverage  .dockerignore  .env.production  .env.vantiq  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  .railwayignore  .replit  .vercelignore  @api-structure.md  @backend-structure.md  @file-structure.md  @ml-implementation-plan.md  @progress.md  @project-status.md  @tech-stack.md  ADVANCED_ARCHITECTURE_SUMMARY.md  ASTROSHIELD_COMPREHENSIVE_BENCHMARK_COMPARISON.md  ASTROSHIELD_DEPLOYMENT_DASHBOARD.md  ASTROSHIELD_TBD_VALIDATION_REPORT.md  AUTHENTICATION_STATUS.md  AstroShield_Enhanced_Architecture.md  AstroShield_Enhanced_Research_Paper.md  AstroShield_Research_Paper.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_TEST.md  DND_INTEGRATION_GUIDE.md  DOMAIN_DEPLOYMENT_REQUEST.md  Dockerfile  Dockerfile.event-processor  Dockerfile.simple  FINAL_MISSION_ACCOMPLISHED_REPORT.md  FRONTEND_FIX_SUMMARY.md  (+280 more)
.github/: dependabot.yml
.next/: build-manifest.json  trace
.upm/: store.json
SDA transcripts/: FW_ Subsystem - 5 Hostility Monitoring Weekly Check in(1).txt  FW_ Subsystem - 5 Hostility Monitoring Weekly Check in.txt  FW_ Subsystem - 5 Hostility Monitoring Weekly Check in_otter_ai-2.txt  FW_ Subsystem - 5 Hostility Monitoring Weekly Check in_otter_ai.txt  Launch Exercise Coordination Meeting.txt  SDA cohort 6 (part 2).txt  SDA cohort 6 part 3.txt  SDA cohort 6.txt  SDA expert talk 2_otter_ai.txt  SDA expert talk.txt  SDA expert talk_otter_ai.txt  SDA ift8 planning.txt  SDA post ISS_IFT8 Launch assessment_otter_ai.txt  SDA subsystem 4.txt  SDA subsystem 4_otter_ai.txt
analysis/: __init__.py  advanced_indicators.py  ccdm_evaluators.py  ccdm_models.py  kill_chain_detector.py  ml_evaluators.py  stimulation_evaluator.py
api/: __init__.py  ccdm_endpoints.py  ccdm_models.py  cron.py  endpoints.py  gateway.py  index.py  requirements.txt  rpo_shape_endpoints.py  vercel.json
app/: README.md  __init__.py  globals.css  layout.tsx  main.py  main_event_processor.py  not-found.tsx  page.tsx
artifacts/: delta_report.csv  metrics_summary.csv
astroshield-integration-package/: LICENSE  QUICK_START.md  README.md  requirements-event-processor.txt  setup.py
backend/: .env.production  .gitignore  Dockerfile  config.py  generate_training_data.py  minimal_server.py  nixpacks.toml  requirements.txt  run.sh  test_api 2.py  test_trajectory.py  vspackage
backend_fixed/: README.md  api_test.html  app.py  astroshield.db  main.py  requirements.minimal 2.txt  requirements.txt  run_data_generation.sh  setup_database.sh  simple_tle_demo.py  test_auth.py  test_server.py  test_tle_demo.py  udl_auth.py
benchmark data/: astroshield_benchmarking_metrics.json  (+5 more)
(+1288 files in other folders)
