[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-migrate>=4.0.7",
    "flask-limiter>=3.8.0",
    "flask-caching>=2.3.0",
    "numpy>=2.1.3",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
    "pandas",
    "flask-swagger-ui>=4.11.1",
    "flasgger>=0.9.7.1",
    "flask-redis",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["__tests__"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
